--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,6 +43,8 @@
     --coral: hsl(15, 100%, 65%);
     --white: hsl(0, 0%, 100%);
     --onyx: hsl(207, 8%, 21%);
+    --sky-blue: hsl(197, 71%, 73%);
+    
   
     /**
      * typography
@@ -130,7 +132,7 @@
   
   body {
     padding-block-start: 72px;
-    background: var(--cultured);
+    background-color: var(--sky-blue); /* Use the sky blue color variable */
   }
   
   :focus-visible {
@@ -770,7 +772,6 @@
   \*-----------------------------------*/
   
   .footer {
-    background: var(--white);
     padding-block: 25px;
   }
   
